connection DB+login

--- a/lib/views/log-in.jade
+++ b/lib/views/log-in.jade
@@ -11,3 +11,7 @@ html
       div.page-header
         h1 Login
         p Vous etes bien authentifié!
+
+     form.login-form.form-horizontal(method='delete', role='form')
+
+      button.login.btn.btn-primary(type='submit' href='DeleteMaggle') Supprimercompte
