--- a/lib/views/login.jade
+++ b/lib/views/login.jade
@@ -23,6 +23,7 @@ html
               required=true,
               name='givenLogin',
               type='text',
+              id='givenLogin',
               value=givenLogin)
         div.form-group
           label.col-sm-4 Mot de Passe
@@ -30,6 +31,7 @@ html
             input.form-control(placeholder='Votre MDP',
               required=true,
               name='Mdp',
+              id='Mdp',
               type='password',
               value=Mdp)
 
